<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/registerscreen">

    <LinearLayout
        android:background="@drawable/bgwhiteradius"
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textColor="@color/greenStrong"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:layout_height="50dp"
            android:textColor="@color/greyStrong"
            android:hint="@string/register_hintFn"
            android:textColorHint="@color/grey"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:maxLength="18"
            android:inputType="text|textNoSuggestions"
            android:id="@+id/edtFirstNameReg"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:layout_height="50dp"
            android:textColor="@color/greyStrong"
            android:hint="@string/register_hintLn"
            android:textColorHint="@color/grey"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:maxLength="18"
            android:inputType="text|textNoSuggestions"
            android:id="@+id/edtLastNameReg"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:layout_height="50dp"
            android:textColor="@color/greyStrong"
            android:hint="@string/register_hintEmail"
            android:textColorHint="@color/grey"
            android:drawableEnd="@drawable/ic_email_black_18dp"
            android:maxLength="22"
            android:inputType="text|textEmailAddress|textNoSuggestions"
            android:id="@+id/edtEmailReg"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:layout_height="50dp"
            android:textColor="@color/greyStrong"
            android:hint="@string/register_hintPassword"
            android:textColorHint="@color/grey"
            android:drawableEnd="@drawable/ic_lock_black_18dp"
            android:maxLength="22"
            android:inputType="textPassword|textNoSuggestions"
            android:id="@+id/edtPasswordReg"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:layout_height="50dp"
            android:textColor="@color/greyStrong"
            android:hint="@string/register_hintRepeatPassword"
            android:textColorHint="@color/grey"
            android:drawableEnd="@drawable/ic_lock_black_18dp"
            android:maxLength="22"
            android:inputType="textPassword|textNoSuggestions"
            android:id="@+id/edtRepeatPasswordReg"
            android:importantForAutofill="no">
        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="45dp"
            android:fontFamily="@font/light"
            android:textColor="@color/greyStrong"
            android:buttonTint="@color/greenStrong"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:text="@string/register_checkboxText"
            android:id="@+id/cbTermsReg">
        </CheckBox>

        <Button
            android:background="@drawable/buttons"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/register_buttonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="btnCreateAccount">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/thin"
            android:text="@string/register_back"
            android:textAlignment="center"
            android:textColor="@color/greenStrong"
            android:textSize="20sp"
            android:onClick="txvBackToLogin">
        </TextView>

    </LinearLayout>

</LinearLayout>