<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToWithdrawActivity"
    android:background="@drawable/greenscreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/normal"
                android:text="@string/toWithdraw_title"
                android:textColor="@color/white"
                android:textSize="40sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/person"
                android:onClick="ibProfileToWithdraw">
            </ImageButton>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/bgwhite"
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/toWithdraw_description"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="22sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/greenStrong">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toWithdraw_AvailableBalance"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/greenStrong">
            </TextView>

            <TextView
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1200"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/greenLight"
                android:id="@+id/txvAvailableBalanceWithdraw">
            </TextView>

        </LinearLayout>

        <EditText
            android:drawableEnd="@drawable/ic_dolar"
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="30dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/greyStrong"
            android:textColorHint="@color/grey"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/toWithdraw_hint"
            android:textSize="12sp"
            android:id="@+id/edtWithdraw">
        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/light"
            android:textColor="@color/greyStrong"
            android:buttonTint="@color/greenStrong"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:text="@string/toWithdraw_checkboxText"
            android:layout_gravity="start"
            android:layout_marginLeft="46dp"
            android:id="@+id/cbTermWithdraw">
        </CheckBox>

        <Button
            android:background="@drawable/buttons"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/toWithdraw_buttonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="btnToWithdraw">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/thin"
            android:text="@string/toWithdraw_backToWallet"
            android:textAlignment="center"
            android:textColor="@color/greenStrong"
            android:textSize="20sp"
            android:onClick="txvBackToWalletWithdraw">
        </TextView>

    </LinearLayout>

</LinearLayout>