<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveMoneyActivity"
    android:background="@drawable/greenscreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/normal"
                android:text="@string/saveMoney_title"
                android:textColor="@color/white"
                android:textSize="40sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/person"
                android:onClick="ibProfileSm">
            </ImageButton>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/bgwhite"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/saveMoney_txtExplanation"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="22sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/greenStrong">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_marginRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveMoney_balance"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:fontFamily="@font/bold"
                android:textColor="@color/greenStrong">
            </TextView>

            <TextView
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$3000"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/greenLight"
                android:id="@+id/txvBalanceSaveMoney">
            </TextView>

        </LinearLayout>

        <EditText
            android:drawableEnd="@drawable/ic_dolar"
            android:background="@drawable/bgedittexts"
            android:layout_marginTop="30dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/greyStrong"
            android:textColorHint="@color/grey"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/saveMoney_hint"
            android:textSize="14sp"
            android:id="@+id/edtHowMuch">
        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/light"
            android:textColor="@color/greyStrong"
            android:buttonTint="@color/greenStrong"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:text="@string/saveMoney_checkboxText"
            android:layout_gravity="start"
            android:layout_marginLeft="46dp"
            android:id="@+id/cbTermSaveMoney">
        </CheckBox>

        <Button
            android:background="@drawable/buttons"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/saveMoney_buttonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="btnToApplySaveMoney">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/thin"
            android:text="@string/saveMoney_backToHome"
            android:textAlignment="center"
            android:textColor="@color/greenStrong"
            android:textSize="20sp"
            android:onClick="txvBackToHome">
        </TextView>

    </LinearLayout>

</LinearLayout>